04-fibonacci-k8s/k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: hoangtrx/fibonacci_worker
          # No need to config ports as no other objects connect to
          # this worker pod(s). Only the worker pod(s) tries to
          # connect to Redis
