04-fibonacci-k8s/k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    # this is the label defined in the client-deployment.yaml
    component: web
  ports:
      # the port that other Pods can use to access this ClusterIP service
    - port: 3000
      # the port that the container(s) running inside the Pod
      # managed by this ClusterIP service is listening
      targetPort: 3000
