04-fibonacci-k8s/k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    # this is the label defined in the redis-deployment.yaml
    component: redis
  ports:
      # the port that other Pods can use to access this ClusterIP service
    - port: 6379
      # the port that the container(s) running inside the Pod
      # managed by this ClusterIP service is listening
      targetPort: 6379
