04-fibonacci-k8s/k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    # this is the label defined in the server-deployment.yaml
    component: server
  ports:
      # the port that other Pods can use to access this ClusterIP service
    - port: 5000
      # the port that the container(s) running inside the Pod
      # managed by this ClusterIP service is listening
      targetPort: 5000
