04-fibonacci-k8s/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx' # want to create ingress controller based on Nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # use regex in the path
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # rewrite incoming URL /api/... to just /... and send that to the server
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
